fix(core): overflow hidden sur le container--fluid

--- a/src/core/style/grid/tool/_grid.scss
+++ b/src/core/style/grid/tool/_grid.scss
@@ -79,6 +79,7 @@
         #{ns('container' + $mod + '--fluid')} {
           @include padding-x(0);
           @include max-size(none);
+          overflow: hidden;
         }
       }
 
